--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "menu",
   "version": "1.0.0",
   "description": "sth about menu",
-  "main": "/dist/bundle.js",
+  "main": "/lib/bundle.js",
   "scripts": {
     "build": "NODE_ENV=production webpack -p --config webpack.config.js",
     "compile": "NODE_ENV=development webpack -p --config webpack.config.dev.js",
@@ -22,16 +22,19 @@
   },
   "files": [
     "assets/*.css",
-    "dist"
+    "lib"
   ],
   "homepage": "https://github.com/tsx-component/Menu#readme",
   "dependencies": {
+    "classnames": "^2.2.5"
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.2.3",
     "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.5",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
-  },
-  "devDependencies": {
+    "react-dom": "^16.3.2",
+    "source-map-loader": "^0.2.3",
     "ts-loader": "^4.2.0",
     "typescript": "^2.8.3"
   }
