--- a/package.json
+++ b/package.json
@@ -6,7 +6,23 @@
   "scripts": {
     "build": "NODE_ENV=production webpack -p --config webpack.config.js",
     "compile": "NODE_ENV=development webpack -p --config webpack.config.dev.js",
-    "test": "test"
+    "test": "jest",
+    "coverage": "jest --coverage"
+  },
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*"
+    ],
+    "transform": {
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "/*.spec.(ts|tsx|js)$"
   },
   "repository": {
     "type": "git",
@@ -30,11 +46,18 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
+    "@types/enzyme": "^3.1.10",
+    "@types/enzyme-to-json": "^1.5.1",
+    "@types/jest": "^22.2.3",
     "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.5",
+    "enzyme": "^3.3.0",
+    "enzyme-to-json": "^3.3.3",
+    "jest": "^22.4.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "source-map-loader": "^0.2.3",
+    "ts-jest": "^22.4.4",
     "ts-loader": "^4.2.0",
     "typescript": "^2.8.3"
   }
